kubernetes/flux/applications/base/factorio/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: factorio
  namespace: factorio
  labels:
    name: factorio
spec:
  type: NodePort
  selector:
    name: factorio
  ports:
    - name: factorio
      port: 34197
      targetPort: 34197
      nodePort: 31499
      protocol: UDP
